--- a/app/src/main/res/values/ui_constants.xml
+++ b/app/src/main/res/values/ui_constants.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="course_grid_span">2</integer>
+    <integer name="cursor_adapter_flag">0</integer>
 </resources>
