--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,6 +5,9 @@
         android:id="@+id/action_backup_notes"
         android:title="@string/action_backup_notes" />
     <item
+        android:id="@+id/action_upload_notes"
+        android:title="@string/action_upload_notes" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
